# pytho-public

./: .gitmodules  docker-compose.yml
antevorta/: Cargo.toml  README.md
antevorta/src/: lib.rs
antevorta/tests/: test_builds.rs  test_depositstrategy.rs  test_result.rs  test_sim.rs
back/: .env  .gitignore  Dockerfile  docker-compose.yml  package.json  tsconfig.json
back/lib/panacea/: .gitignore  Cargo.toml
back/lib/panacea/antevorta/src/: lib.rs
back/lib/panacea/antevorta/src/country/uk/: mod.rs
back/lib/panacea/antevorta/src/country/uk/tax/: mod.rs
back/lib/panacea/antevorta/src/input/: mod.rs
back/lib/panacea/antevorta/src/schedule/: mod.rs
back/lib/panacea/antevorta/tests/: test_builds.rs  test_depositstrategy.rs
back/lib/panacea/src/: lib.rs
back/lib/panacea/src/calcs/: mod.rs
back/lib/panacea/src/data/: mod.rs
back/lib/panacea/src/risk/: mod.rs
back/lib/panacea/src/sim/: alator.rs  antevorta.rs  mod.rs
back/lib/panacea/src/stat/: mod.rs
back/src/: app.js  app.ts  server.js  server.ts
blog/: _config.yml  index.markdown
blog/_includes/: head.html  header.html
blog/_layouts/: default.html
blog/_posts/: 2022-11-09-lifetime-sim.markdown
data/coverage/: main.py
data/factors/: main.py
data/jst/: bond.py  equity.py  input.py  jst.txt  world_bond.json  world_equity.json
data/old/: init_coverage.py  thirteenf.py  update_sec_filings.py
data/thirteenf/: main.py
db/: .gitignore  docker-compose.yml  fly.toml
front/: .eslintrc.yml  .gitignore  package.json  tsconfig.json  webpack.config.js  webpack.prod.config.js
front/src/: index.html  index.js
monitor/: docker-compose.yml
next/: .eslintrc.json  .gitignore  .prettierignore  Dockerfile  fly.toml  next.config.js  package-lock.json  package.json  tsconfig.json
panacea/: antevorta
research/: bust2.ipynb  state_pension.ipynb
(+225 files in other folders)
